@@ -1,3 +1,7 @@
+2003-09-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>
+
+	* src/SDCCicode.c (geniCodeLogic): fixed bug #797572
+
 2003-09-07  Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
 	* device/include/string.h: added size_t typedef, changed
